# pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic.py
pipeline/: __init__.py
tests/: test_pipeline.py
