[project]
name = "pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "uname-n",email = "git@defend.sh"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars (>=1.36.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "cbor2 (>=5.7.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
